Fix overflow

--- a/themes/cornerstone/source/css/index.styl
+++ b/themes/cornerstone/source/css/index.styl
@@ -59,7 +59,7 @@ $space = 40px
           height: calc(100% - 40px)
           width: calc(100% - 40px)
           margin: 20px
-          overflow: auto
+          overflow: hidden
           border: 1px solid $highlight
           border-radius: 4px
           transition: border-color 0.3s ease
